[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/InteractableArea.gd" type="Script" id=1]
[ext_resource path="res://Interact Popup Image Yellow.png" type="Texture" id=2]

[node name="InteractableArea" type="Area2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="InteractSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -40 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_InteractableArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_InteractableArea_body_exited"]
